--- a/management/index.html
+++ b/management/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script type="text/javascript" src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=5B3ZaUDtRoOhu8KAGiiI1YH3sQ5hBGJg"></script>
   </body>
 </html>
